--- a/brand-content.html
+++ b/brand-content.html
@@ -67,8 +67,8 @@
   </main>
   <footer id="footer">
     <div class="top">
-      <a href="javascript:;">登录</a>
-      <a href="javascript:;">注册</a>
+      <a href="loagin.html">登录</a>
+      <a href="register.html">注册</a>
       <a href="javascript:;"><i class="fa fa-arrow-up"></i>返回顶部</a>
     </div>
     <div class="bottom">
