--- a/gsproduct.html
+++ b/gsproduct.html
@@ -25,6 +25,10 @@
         <h1>凑单品</h1>
         <!-- <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a> -->
         <a href="#" class="fa fa-download right"></a>
+        <!-- <section id="search">
+            <input type="search" class="search" placeholder="请输入要搜索的内容">
+            <button type="button" class="btn-search">搜索</button>
+        </section> -->
     </header>
     <div id="option">
         <section id="choice">
