--- a/brand-content.html
+++ b/brand-content.html
@@ -21,9 +21,9 @@
 <body>
   <!-- 头部区域 -->
   <header id="header">
-    <a href="index.html" class="fa fa-angle-left left"></a>
-    <h1>注册</h1>
-    <!-- <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a> -->
+    <!-- <a href="index.html" class="fa fa-angle-left left"></a>
+    <h1>注册</h1> -->
+    <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
     <a href="#" class="fa fa-download right"></a>
   </header>
   <section id="search">
@@ -118,7 +118,7 @@
   <script id="pingLunTpl" type="text/html">
     {{each result value}}
         <li class="mui-table-view-cell">
-                <a href="productDetails.html?productId=" + {{value.productId}}>
+                <a href="productDetails.html?productId={{value.productId}}">
                     <div class="commentTitle">
                         <img src="http://pro.zuyushop.com:8015/ProPic/201510/Thumb/Thumb_201510001104382491.jpg"
                             alt="乐视TV(Letv) 超3 X55 55英寸智能LED液晶 超级电视 4K超清电视" width="100" height="100">
