第四小组项目第一次整合

--- a/brand-content.html
+++ b/brand-content.html
@@ -11,19 +11,18 @@
   <link rel="stylesheet" href="lib/mui/css/mui.min.css">
 
   <!-- less 样式 -->
-  <link rel="stylesheet/less" href="less/brand-content.less">
+  <link rel="stylesheet/less" href="./less/brand-content.less">
   <script src="lib/less/less.js"></script>
 
   <!-- 根据屏幕设置根元素的字体大小 -->
 
 </head>
-
 <body>
   <!-- 头部区域 -->
   <header id="header">
     <!-- <a href="index.html" class="fa fa-angle-left left"></a>
     <h1>注册</h1> -->
-    <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
+    <a href="index.html" class="logo"><img src="./images/header_logo.png" alt=""></a>
     <a href="#" class="fa fa-download right"></a>
   </header>
   <section id="search">
@@ -32,6 +31,7 @@
   </section>
   <main id="main">
     <div class="head">
+
       首页&nbsp;>全部分类>
     </div>
     <div class="tab">
@@ -42,7 +42,7 @@
         <div class="mui-control-item" data-title="tab2">
           销量排行
         </div>
-        <div class="mui-control-item" data-title="tab3">
+        <div class="mui-control-item" data-title="tab3" id="coment-tab"> 
           最新评论
         </div>
       </div>
@@ -69,7 +69,7 @@
     <div class="top">
       <a href="loagin.html">登录</a>
       <a href="register.html">注册</a>
-      <a href="javascript:;"><i class="fa fa-arrow-up"></i>返回顶部</a>
+      <a href="javascript:;" class=".to-top"><i class="fa fa-arrow-up"></i>返回顶部</a>
     </div>
     <div class="bottom">
       <p class="content"><span>手机APP下载</span>慢慢买手机版--掌上比价平台</p>
