--- a/gsproduct.html
+++ b/gsproduct.html
@@ -94,7 +94,7 @@
                 <a href=" http://item.m.jd.com/ware/view.action?wareId=1274360" class="content">
                     <img src="{{value.productImg}}" alt="">
                     <p class="des">{{value.productName}}</p>
-                    <p class="other"><span class="price">{{value.productPrice}}</span><button>去凑单</button></p>
+                    <p class="other"><span class="price">{{value.productPrice}}</span><button type="button">去凑单</button></p>
                 </a>
             </div>
         {{/each}}
