第四小组第二次整合

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <script id="productTpl" type="text/html">
         {{each result value}}
              <li>
-                <a href="#">
+                <a href="save-sale.html?id={{value.productId}}">
                     <div class="left-content">
                         {{@value.productImgSm}}
                     </div>
