--- a/productlist.html
+++ b/productlist.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet/less" href="less/productlist.less">
     <!-- 4. 引入less.js编译器文件 -->
     <script src="lib/less/less.js"></script>
+    <!-- 5.引入rem的js -->
+    <script src="js/rem.js"></script>
 </head>
 
 <body>
@@ -21,7 +23,7 @@
     <header id="header">
         <!-- <a href="index.html" class="fa fa-angle-left left"></a>
         <h1>登陆</h1> -->
-        <a href="index.html" class="logo"><img src="./images/header_logo.png" alt=""></a>
+        <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
         <a href="#" class="fa fa-download right"></a>
     </header>
     <!-- 商品列表区域 -->
@@ -43,7 +45,8 @@
                 <!-- 商品内容区域 -->
                 <div class="product-content">
                     <ul class="mui-table-view product-list">
-                        <li class="mui-table-view-cell mui-media">
+                        <!-- 写入模版 -->
+                        <!-- <li class="mui-table-view-cell mui-media">
                             <a href="javascript:;">
                                 <img class=" mui-pull-left product-left" src="images/xji01.jpg">
                                 <div class="mui-media-body product-right">
@@ -64,117 +67,7 @@
                                     </div>
                                 </div>
                             </a>
-                        </li>
-                        <li class="mui-table-view-cell mui-media">
-                            <a href="javascript:;">
-                                <img class=" mui-pull-left product-left" src="images/xji01.jpg">
-                                <div class="mui-media-body product-right">
-                                    <span class="title ">奥林巴斯/ OLYMPUS TG-4 1600万像素数码相机</span>
-                                    <div class="product-price">
-                                        <span>￥2499.00</span>
-                                        <div class="product-star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="product-evaluate">
-                                        <div>评价 <span>(108)</span> </div>
-                                        <div>报价<span>(3)</span></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="mui-table-view-cell mui-media">
-                            <a href="javascript:;">
-                                <img class=" mui-pull-left product-left" src="images/xji01.jpg">
-                                <div class="mui-media-body product-right">
-                                    <span class="title ">奥林巴斯/ OLYMPUS TG-4 1600万像素数码相机</span>
-                                    <div class="product-price">
-                                        <span>￥2499.00</span>
-                                        <div class="product-star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="product-evaluate">
-                                        <div>评价 <span>(108)</span> </div>
-                                        <div>报价<span>(3)</span></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="mui-table-view-cell mui-media">
-                            <a href="javascript:;">
-                                <img class=" mui-pull-left product-left" src="images/xji01.jpg">
-                                <div class="mui-media-body product-right">
-                                    <span class="title ">奥林巴斯/ OLYMPUS TG-4 1600万像素数码相机</span>
-                                    <div class="product-price">
-                                        <span>￥2499.00</span>
-                                        <div class="product-star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="product-evaluate">
-                                        <div>评价 <span>(108)</span> </div>
-                                        <div>报价<span>(3)</span></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="mui-table-view-cell mui-media">
-                            <a href="javascript:;">
-                                <img class=" mui-pull-left product-left" src="images/xji01.jpg">
-                                <div class="mui-media-body product-right">
-                                    <span class="title ">奥林巴斯/ OLYMPUS TG-4 1600万像素数码相机</span>
-                                    <div class="product-price">
-                                        <span>￥2499.00</span>
-                                        <div class="product-star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="product-evaluate">
-                                        <div>评价 <span>(108)</span> </div>
-                                        <div>报价<span>(3)</span></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="mui-table-view-cell mui-media">
-                            <a href="javascript:;">
-                                <img class=" mui-pull-left product-left" src="images/xji01.jpg">
-                                <div class="mui-media-body product-right">
-                                    <span class="title ">奥林巴斯/ OLYMPUS TG-4 1600万像素数码相机</span>
-                                    <div class="product-price">
-                                        <span>￥2499.00</span>
-                                        <div class="product-star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="product-evaluate">
-                                        <div>评价 <span>(108)</span> </div>
-                                        <div>报价<span>(3)</span></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
+                        </li> -->
 
                     </ul>
                 </div>
@@ -222,8 +115,8 @@
     <script type="text/html" id="categoryTpl">
         {{each result value}}      
             <div class="nav-left">
-                <a href="#">首页></a>
-                <a href="#">全部分类></a> 
+                <a href="/index.html">首页></a>
+                <a href="/category.html">全部分类></a> 
                <a href="#">{{value.category}}</a>
             </div>
             <div class="nav-right">
@@ -231,10 +124,11 @@
             </div>         
         {{/each}}
     </script>
+    <!-- 列表模版 -->
     <script type="text/html" id='productlistTpl'>
-      {{each result value}}
+        {{each result value}}
       <li class="mui-table-view-cell mui-media">
-            <a href="productDetails.html?productId={{value.productId}}">
+            <a href="/productDetails.html?productId={{value.productId}}&categoryid={{value.categoryId}}">
                 <div class=" mui-pull-left product-left">
                  {{@value.productImg}}
                 </div>
