--- a/brand-content.html
+++ b/brand-content.html
@@ -11,12 +11,13 @@
   <link rel="stylesheet" href="lib/mui/css/mui.min.css">
 
   <!-- less 样式 -->
-  <link rel="stylesheet/less" href="./less/brand-content.less">
+  <link rel="stylesheet/less" href="less/brand-content.less">
   <script src="lib/less/less.js"></script>
 
   <!-- 根据屏幕设置根元素的字体大小 -->
 
 </head>
+
 <body>
   <!-- 头部区域 -->
   <header id="header">
@@ -31,7 +32,6 @@
   </section>
   <main id="main">
     <div class="head">
-
       首页&nbsp;>全部分类>
     </div>
     <div class="tab">
@@ -42,13 +42,13 @@
         <div class="mui-control-item" data-title="tab2">
           销量排行
         </div>
-        <div class="mui-control-item" data-title="tab3" id="coment-tab"> 
+        <div class="mui-control-item" data-title="tab3">
           最新评论
         </div>
       </div>
     </div>
     <div class="content">
-      <div class="mui-control-content mui-active" data-content="tab1">
+      <div class="mui-control-content" data-content="tab1">
         <ul class="brandranking-wrap" id="brandTop">
 
         </ul>
@@ -69,7 +69,7 @@
     <div class="top">
       <a href="loagin.html">登录</a>
       <a href="register.html">注册</a>
-      <a href="javascript:;" class=".to-top"><i class="fa fa-arrow-up"></i>返回顶部</a>
+      <a href="javascript:;" class="to-top"><i class="fa fa-arrow-up"></i>返回顶部</a>
     </div>
     <div class="bottom">
       <p class="content"><span>手机APP下载</span>慢慢买手机版--掌上比价平台</p>
@@ -83,7 +83,7 @@
   <script type="text/html" id="brandTop10tpl">
     {{each result value index}}
       <li class="brandranking-cell">
-        <a href="productList.html?categoryid={{value.categoryId}}&pageid=1">
+        <a href="productList.html?categoryid={{value.categoryId}}">
           <div class="brandranking-tag-wrap"><span class="brandranking-tag">{{index+1}}</span></div>
           <div class="brandranking">
           <div class="brandranking-title">{{value.brandName}}</div>
@@ -101,7 +101,7 @@
   <script type="text/html" id="salesTop10tpl">
     {{each result value}}
       <li class="mui-table-view-cell mui-media">
-        <a href="productDetails.html?productId={{value.productId}}">
+        <a href="productDetails.html?productId={{value.productId}}&categoryId={{value.categoryId}}">
           <div class="mui-media-object mui-pull-left">
           {{@value.productImg}}
           </div>
@@ -118,7 +118,7 @@
   <script id="pingLunTpl" type="text/html">
     {{each result value}}
         <li class="mui-table-view-cell">
-                <a href="productDetails.html?productId={{value.productId}}">
+                <a href="productDetails.html?productId={{value.productId}}&categoryId={{value.categoryId}}">
                     <div class="commentTitle">
                         <img src="http://pro.zuyushop.com:8015/ProPic/201510/Thumb/Thumb_201510001104382491.jpg"
                             alt="乐视TV(Letv) 超3 X55 55英寸智能LED液晶 超级电视 4K超清电视" width="100" height="100">
@@ -150,6 +150,7 @@
 
   <script src="lib/zepto/zepto.min.js"></script>
   <script src="lib/artTemplate/template-web.js"></script>
+  <script src="js/module.js"></script>
   <script src="js/brand-content.js"></script>
 </body>
 
