--- a/productDetails.html
+++ b/productDetails.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet/less" href="less/productDetails.less">
     <!-- 4. 引入less.js编译器文件 -->
     <script src="lib/less/less.js"></script>
+    <!-- 5.引入rem的js -->
+    <script src="js/rem.js"></script>
 </head>
 
 <body>
@@ -21,21 +23,21 @@
     <header id="header">
         <!-- <a href="index.html" class="fa fa-angle-left left"></a>
         <h1>登陆</h1> -->
-        <a href="index.html" class="logo"><img src="./images/header_logo.png" alt=""></a>
+        <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
         <a href="#" class="fa fa-download right"></a>
     </header>
     <!-- 商品列表区域 -->
     <main id="main">
         <!-- 商品导航区域 -->
         <div class="product-nav">
-            <div class="nav-left">
-                <a href="#">首页></a>
-                <a href="#">全部分类></a>
+            <!-- <div class="nav-left">
+                <a href="/index.html">首页></a>
+                <a href="/category.html">全部分类></a>
                 <a href="/productlist.html">数码相机</a>
             </div>
             <div class="nav-right">
                 <button type="button">筛选</button>
-            </div>
+            </div> -->
         </div>
         <!-- 商品详情区域 -->
         <div class="mui-scroll-wrapper">
@@ -75,7 +77,7 @@
                     <!-- 评价内容区域 -->
                     <div class="evaluate-content">
                         <ul class="mui-table-view">
-                            <li class="mui-table-view-cell">
+                            <!-- <li class="mui-table-view-cell">
                                 <div class="title">
                                     <div class="title-left">
                                         <span> 胡***朋 </span>
@@ -102,81 +104,10 @@
                                     而且不支持3.5mm接口或红白莲音频输出，害得我折腾半天，
                                     必须买光纤音频线
                                 </div>
-                            </li>
-
-                        </ul>
-                    </div>
-                    <div class="evaluate-content">
-                        <ul class="mui-table-view">
-                            <li class="mui-table-view-cell">
-                                <div class="title">
-                                    <div class="title-left">
-                                        <span> 胡***朋 </span>
-                                        <div class="star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="title-right">
-                                        <span>2015/10/6</span>
-                                        <p>购买自：亚马孙</p>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    使用了一周整体不错，主要是为了看纪录片和足球。
-                                    装在窗户上有种大鱼缸的感觉哈！清晰度不错色彩也可以，
-                                    应该说对得起2200的价格！还送了五年乐视会员，看英超所有比赛都free，
-                                    但乐观乐视内容这块还不太丰富，应为家里也有百事通bestv和小米盒子，
-                                    比较了下，电影百事通最好，纪录片小米最好，只有体育这块乐视比那两家好，
-                                    还要多努力啊！电视本身有个不足，音响太差，太山寨了！
-                                    而且不支持3.5mm接口或红白莲音频输出，害得我折腾半天，
-                                    必须买光纤音频线
-                                </div>
-                            </li>
-
-                        </ul>
-                    </div>
-                    <div class="evaluate-content">
-                        <ul class="mui-table-view">
-                            <li class="mui-table-view-cell">
-                                <div class="title">
-                                    <div class="title-left">
-                                        <span> 胡***朋 </span>
-                                        <div class="star">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                            <img src="images/star.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="title-right">
-                                        <span>2015/10/6</span>
-                                        <p>购买自：亚马孙</p>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    使用了一周整体不错，主要是为了看纪录片和足球。
-                                    装在窗户上有种大鱼缸的感觉哈！清晰度不错色彩也可以，
-                                    应该说对得起2200的价格！还送了五年乐视会员，看英超所有比赛都free，
-                                    但乐观乐视内容这块还不太丰富，应为家里也有百事通bestv和小米盒子，
-                                    比较了下，电影百事通最好，纪录片小米最好，只有体育这块乐视比那两家好，
-                                    还要多努力啊！电视本身有个不足，音响太差，太山寨了！
-                                    而且不支持3.5mm接口或红白莲音频输出，害得我折腾半天，
-                                    必须买光纤音频线
-                                </div>
-                            </li>
-
+                            </li> -->
                         </ul>
                     </div>
                 </section>
-
-
-
-
                 <!-- 品牌排行区域 -->
                 <div class="product-rank mui-table-view">
                     <ul class="mui-table-view">
@@ -201,6 +132,19 @@
             </div>
         </div>
     </main>
+    <!-- 实现分类名称渲染模版 -->
+    <script type="text/html" id="categoryTpl">
+        {{each result value}}      
+            <div class="nav-left">
+                <a href="/index.html">首页></a>
+                <a href="/category.html">全部分类></a> 
+               <a href="/productlist.html?categoryid={{value.categoryId}}">{{value.category}}</a>
+            </div>
+            <div class="nav-right">
+                <button type="button">筛选</button>
+            </div>         
+        {{/each}}
+    </script>
     <!-- 实现商品详情渲染模版 -->
     <script type="text/html" id="productTpl">
         {{each result value}}
