--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <!-- 头部区域 -->
     <header id="header">
-        <a href="index.html" class="fa fa-angle-left left"></a>
-        <h1>慢慢买</h1>
-        <!-- <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a> -->
+        <!-- <a href="index.html" class="fa fa-angle-left left"></a> -->
+        <!-- <h1>慢慢买</h1> -->
+        <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
         <a href="#" class="fa fa-download right"></a>
     </header>
 
