--- a/baicaijia.html
+++ b/baicaijia.html
@@ -69,7 +69,7 @@
     <!-- 头部 -->
     <header id="header">
         <div class="head-box">
-            <a href="#" class="fa fa-angle-left"></a>
+            <a href="index.html" class="fa fa-angle-left"></a>
             <h4 class="baicaijia-title">白菜价-淘宝内部券</h4>
             <a href="#" class="baicaijia-search"><span class="fa fa-download"></span></a>
             <a href="#" class="baicaijia-search"><span class="fa fa-search"></span></a>
