--- a/category.html
+++ b/category.html
@@ -21,7 +21,7 @@
 <body>
     <!-- 头部区域 -->
     <header id="header">
-        <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="./images/header_logo.png" alt=""></a>
         <a href="#" class="fa fa-download right"></a>
     </header>
     <!-- 搜索框 -->
