--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
 
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="scratchMod.js"></script>
+    <script type="text/javascript" src="static/js/scratchMod.js"></script>
     <script type="text/javascript" src="static/js/dome.js"></script>
     <script src="static/js/highlight.pack.js"></script>
     <script>
@@ -17,11 +17,19 @@
 </head>
 
 <body>
+    <div class="right">
+    </div>
+
     <div class="container-fluid">
         <div class="row">
             <div id="scratch_mod_container" class="col-md-12 text-center center-block" style="width:100%;height: 100%;float: none">
             </div>
         </div>
+    </div>
+    <div class="rule">
+    </div>
+    <div class="qr">
+    
     </div>
 </body>
 
