--- a/productlist.html
+++ b/productlist.html
@@ -23,7 +23,7 @@
     <header id="header">
         <!-- <a href="index.html" class="fa fa-angle-left left"></a>
         <h1>登陆</h1> -->
-        <a href="javascript:;" class="logo"><img src="./images/header_logo.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="./images/header_logo.png" alt=""></a>
         <a href="#" class="fa fa-download right"></a>
     </header>
     <!-- 商品列表区域 -->
