第四组项目最终提交版本

--- a/brand-content.html
+++ b/brand-content.html
@@ -32,7 +32,7 @@
   </section>
   <main id="main">
     <div class="head">
-      首页&nbsp;>全部分类>
+      首页&nbsp;><a href="brandtitle.html">全部分类</a>>
     </div>
     <div class="tab">
       <div class="tab-wrap mui-segmented-control mui-segmented-control-primary">
